[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TrackerFinder"
version = "1.0.2"
dependencies = [
   "PyQt5",
   "PySerial"
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  { name="MisterMartin", email="mistermartin@users.noreply.github.com" },
]
description = "Capture AX25 messages sent by a LASP VHF tracker."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MisterMartin/TrackerFinder"
"Bug Tracker" = "https://github.com/MisterMartin/TrackerFinder"
